# twips

./: .gitignore  Cargo.toml  Makefile  README.md  biome.json  package.json  tsconfig.json
.github/workflows/: CI.yaml  build-release-binaries.yaml
.github/workflows/install-pinned-toolchains/: action.yaml
docs/ADRs/2025-11-02 — Scramble derivation/: 2025-11-02 — Scramble derivation.md
samples/2x2x2/: 2x2x2.kpuzzle.json
samples/3x3x3/: 3x3x3-Reid.def.json
samples/scramble/: fto-UL.def.json
script/: build-wasm-package.ts  check-engine-versions.ts  generate-megaminx-search-target-patterns.ts  lint-import-restrictions.ts  node-esm-compat.js  ruby-lsp-init.ts  ruby.ts  self-gitignore-dirs.ts
src/cli/: Cargo.toml
src/cli/src/: args.rs
src/cli/src/commands/: cli_search.rs
src/cli/src/serve/: serve.rs
src/ffi/: Cargo.toml
src/ffi/test/: js_test.ts
src/lib/: Cargo.toml
src/lib/_internal/gods_algorithm/: bulk_queue.rs
src/lib/_internal/search/: mod.rs
src/lib/_internal/search/iterative_deepening/: individual_search.rs  iterative_deepening_search.rs
src/lib/scramble/puzzles/: two_phase_3x3x3_scramble_finder.rs
src/lib/scramble/puzzles/definitions/: mod.rs
src/lib/scramble/puzzles/definitions/4x4x4/: 4x4x4-phase1.target.json  (+4 more)
src/lib/scramble/puzzles/kilominx/: kilominx_scramble_finder.rs  mod.rs
src/lib/scramble/puzzles/square1/: phase1.rs  phase2.rs  square1_scramble_finder.rs
src/lib/scramble/scramble_finder/: solving_based_scramble_finder.rs
src/ruby-gem/lib/twips/: version.rb
src/ruby-gem/test/: test_api.rb
src/wasm/: Cargo.toml
(+28 files in other folders)
